add roles endpoint documentation
